# grounded_case

./: .env.example  .gitignore  ARCHITECTURE_full.md  ARCHITECTURE_short.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: cases.py  documents.py  drafts.py  evidence.py  learning.py  processing.py  search.py
backend/app/db/: base.py  session.py  tables.py
backend/app/learning/: __init__.py  classify.py  diff.py  evaluate.py  mine.py  patterns.py  templates.py
backend/app/llm/: client.py  pricing.py
backend/app/models/: __init__.py  case.py  chunk.py  common.py  document.py  draft.py  edit.py  enums.py  evidence_pack.py  extraction.py  fact.py  llm_call.py  pattern.py
backend/app/pipeline/: bm25_store.py  chunk.py  classify.py  evidence.py  index.py  ocr.py  ocr_repair.py  plans.py  process.py  rerank.py  resolve.py  retrieve.py
backend/app/pipeline/extract/: __init__.py  base.py  court_order.py  servicer_email.py  title_search.py
backend/app/pipeline/generate/: __init__.py  base.py  guidance.py  render.py  verify.py
backend/app/storage/: minio_client.py
backend/migrations/: README  env.py
backend/migrations/versions/: 0001_initial.py
backend/scripts/: build_demo_scans.py  eval.py  seed.py  seed_edits.py  write_ocr_demo.py
backend/tests/: test_chunking.py  test_evidence.py  test_extraction.py  test_generate.py  test_ocr.py  test_ocr_repair.py  test_schemas.py  test_search.py  test_storage.py
frontend/: Dockerfile  next.config.ts  (+2 more)
(+40 files in other folders)
